@@ -1,7 +1,7 @@
 # Copyright (c) 2024 Yuki Kimoto
 # MIT License
 
-class Net::SSLeay::Callback::PemPasswd : interface_t {
+class Net::SSLeay::Callback::PemPassword : interface_t {
   use Net::SSLeay;
   
   required method : int ($buf : mutable string, $size : int, $rwflag : int, $arg : object);
